<resources>
    <string name="app_name">homeWork_7_2m(calculator)</string>
    <string name="numberOne">1</string>
    <string name="numberTwo">2</string>
    <string name="numberThree">3</string>
    <string name="numberFour">4</string>
    <string name="numberFive">5</string>
    <string name="numberSix">6</string>
    <string name="numberSeven">7</string>
    <string name="numberEight">8</string>
    <string name="numberNine">9</string>
    <string name="operationAc">AC</string>
    <string name="operationPlusAndMinus">+/-</string>
    <string name="operationPrs">%</string>
    <string name="operationDivision">÷</string>
    <string name="operationMultiplication">x</string>
    <string name="operationMinus">-</string>
    <string name="operationPlus">+</string>
    <string name="operationEquals">=</string>
    <string name="operationDot">.</string>
    <string name="operationZero">0</string>

    <string-array name="Type">
        <item>Type</item>
        <item>item1</item>
        <item>item2</item>
        <item>item3</item>
    </string-array>
    <array name="slider">
        <item>2000</item>
        <item>4000</item>
    </array>
</resources>